--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/react-dom": "^19.2.0",
     "@vitejs/plugin-react": "^5.0.4",
     "dotenv-cli": "^10.0.0",
+    "eslint-plugin-tailwindcss": "^4.0.0-beta.0",
     "jsdom": "^27.0.0",
     "prettier": "^3.5.3",
     "tsx": "^4.20.6",
